--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Days-with-Sir-Roger-De-Coverley_3318
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   authors:
   - agent_name: Steele, Richard, Sir
@@ -20,6 +23,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1024
     wikipedia: http://en.wikipedia.org/wiki/Joseph_Addison
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3318#Days-with-Sir-Roger-De-Coverley
 gutenberg_issued: '2002-07-01'
 gutenberg_type: Text
 identifiers:
